tests/error/modifier_errors/exit_in_dagger.py
from guppylang import guppy
from guppylang.std.builtins import dagger


@guppy
def test() -> None:
    with dagger():
        exit("a")

test.compile()
